deleted unused code about caching, fixed almost all remarks from SonarQube and replaced deprecated method in JwtTokenProvider